--- a/TimeCo/Utilities/TimeCo.Utilities.csproj
+++ b/TimeCo/Utilities/TimeCo.Utilities.csproj
@@ -10,4 +10,12 @@
     <Folder Include="Utilities\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.SqlServer.SqlManagementObjects" Version="170.13.0" />
+  </ItemGroup>
+
 </Project>
