--- a/TimeCo/TimeCo.BLL/TimeCo.BLL.csproj
+++ b/TimeCo/TimeCo.BLL/TimeCo.BLL.csproj
@@ -26,6 +26,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TimeCo\TimeCo.DAL.csproj" />
+    <ProjectReference Include="..\Utilities\TimeCo.Utilities.csproj" />
   </ItemGroup>
 
 </Project>
